@@ -19,7 +19,7 @@ package com.jayway.restassured.config;
 import static com.jayway.restassured.assertion.AssertParameter.notNull;
 
 /**
- * Main configuration for REST Assured that allows you to configure advanced redirection setting and HTTP Client parameters.
+ * Main configuration for REST Assured that allows you to configure advanced settings such as redirections and HTTP Client parameters.
  * <p>
  * Usage example:
  * <pre>
@@ -36,18 +36,19 @@ public class RestAssuredConfig {
     private final DecoderConfig decoderConfig;
     private final SessionConfig sessionConfig;
     private final ObjectMapperConfig objectMapperConfig;
+    private final ConnectionConfig connectionConfig;
 
     /**
      * Create a new RestAssuredConfiguration with the default configurations.
      */
     public RestAssuredConfig() {
         this(new RedirectConfig(), new HttpClientConfig(), new LogConfig(), new EncoderConfig(), new DecoderConfig(), 
-                new SessionConfig(), new ObjectMapperConfig());
+                new SessionConfig(), new ObjectMapperConfig(), new ConnectionConfig());
     }
 
     /**
      * Create a new RestAssuredConfiguration with the supplied {@link RedirectConfig}, {@link HttpClientConfig}, {@link LogConfig}, 
-     * {@link EncoderConfig}, {@link DecoderConfig}, {@link SessionConfig} and {@link ObjectMapperConfig}.
+     * {@link EncoderConfig}, {@link DecoderConfig}, {@link SessionConfig}, {@link ObjectMapperConfig} and {@link ConnectionConfig}.
      */
     public RestAssuredConfig(RedirectConfig redirectConfig,
                              HttpClientConfig httpClientConfig,
@@ -55,7 +56,8 @@ public class RestAssuredConfig {
                              EncoderConfig encoderConfig,
                              DecoderConfig decoderConfig,
                              SessionConfig sessionConfig,
-                             ObjectMapperConfig objectMapperConfig) {
+                             ObjectMapperConfig objectMapperConfig,
+                             ConnectionConfig connectionConfig) {
         notNull(redirectConfig, "Redirect Config");
         notNull(httpClientConfig, "HTTP Client Config");
         notNull(logConfig, "Log config");
@@ -63,6 +65,7 @@ public class RestAssuredConfig {
         notNull(decoderConfig, "Decoder config");
         notNull(sessionConfig, "Session config");
         notNull(objectMapperConfig, "Object mapper config");
+        notNull(connectionConfig, "Connection config");
         this.httpClientConfig = httpClientConfig;
         this.redirectConfig = redirectConfig;
         this.logConfig = logConfig;
@@ -70,6 +73,7 @@ public class RestAssuredConfig {
         this.decoderConfig = decoderConfig;
         this.sessionConfig = sessionConfig;
         this.objectMapperConfig = objectMapperConfig;
+        this.connectionConfig = connectionConfig;
     }
 
     /**
@@ -80,7 +84,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig redirect(RedirectConfig redirectConfig) {
         notNull(redirectConfig, "Redirect config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -91,7 +96,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig httpClient(HttpClientConfig httpClientConfig) {
         notNull(httpClientConfig, "HTTP Client Config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -102,7 +108,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig logConfig(LogConfig logConfig) {
         notNull(logConfig, "Log config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -113,7 +120,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig encoderConfig(EncoderConfig encoderConfig) {
         notNull(encoderConfig, "Encoder config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -124,7 +132,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig decoderConfig(DecoderConfig decoderConfig) {
         notNull(decoderConfig, "Decoder config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -135,7 +144,8 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig sessionConfig(SessionConfig sessionConfig) {
         notNull(sessionConfig, "Session config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -146,7 +156,20 @@ public class RestAssuredConfig {
      */
     public RestAssuredConfig objectMapperConfig(ObjectMapperConfig objectMapperConfig) {
         notNull(objectMapperConfig, "Object mapper config");
-        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig, objectMapperConfig);
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
+    }
+
+    /**
+     * Set the connection config.
+     *
+     * @param connectionConfig The {@link com.jayway.restassured.config.ObjectMapperConfig} to set
+     * @return An updated RestAssuredConfiguration
+     */
+    public RestAssuredConfig connectionConfig(ConnectionConfig connectionConfig) {
+        notNull(connectionConfig, "Connection config");
+        return new RestAssuredConfig(redirectConfig, httpClientConfig, logConfig, encoderConfig, decoderConfig, sessionConfig,
+                objectMapperConfig, connectionConfig);
     }
 
     /**
@@ -210,10 +233,17 @@ public class RestAssuredConfig {
     }
 
     /**
-     * @return The SessionConfig
+     * @return The ObjectMapperConfig
      */
     public ObjectMapperConfig getObjectMapperConfig() {
         return objectMapperConfig;
+    }
+
+    /**
+     * @return The ConnectionConfig
+     */
+    public ConnectionConfig getConnectionConfig() {
+        return connectionConfig;
     }
 
     /**
